fixed spacing issues on project page

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -253,7 +253,7 @@
 .post-list {
   margin-left: 0;
   list-style: none;
-  margin-bottom: 25%;
+  //margin-bottom: 25%;
   > li {
     margin-bottom: $spacing-unit;
   }
